# spqr_trees

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: bc.in  check_planar.py  in1.graph  posch.in  tricon.in  verify_answers.py
examples/bc_dfs/: main.rs
examples/bc_tree/: main.rs
examples/bc_tree_full/: main.rs
examples/bc_tree_skeleton/: main.rs
examples/draw/: main.rs
examples/input/: main.rs
examples/output/: in1.dot  main.rs
examples/palm_tree/: main.rs
examples/split_components/: main.rs
examples/spqr_tree/: main.rs
examples/spqr_tree_envelope/: main.rs
examples/triangulate/: main.rs
src/: block_cut.rs  debugging.rs  embedding.rs  input.rs  lib.rs  output.rs  palm_tree.rs  parallel_edges.rs  reduce.rs  spqr_tree.rs  tarjan.rs  triconnected.rs  tsin.rs  types.rs
src/drawing_blocks/: circular_list.rs  faces.rs  mod.rs  schnyder.rs  triangulate.rs  visualize.rs
src/embedding_blocks/: acceptable_adj.rs  embed.rs  kuratowski.rs  lr.rs  mod.rs  orient.rs  structures.rs
src/example_usages/: combinatorial_embeddings.rs  mod.rs  static_triconnectivity.rs  static_triconnectivity_bicon.rs  static_triconnectivity_full.rs
src/example_usages/oeip/: mod.rs  (+3 more)
src/spqr_blocks/: mod.rs  outside_structures.rs  visualize.rs
src/testing/: graph_enumerator.rs  grids.rs  mod.rs  random_graphs.rs
src/triconnected_blocks/: acceptable_adj.rs  graph_internal.rs  handle_duplicate_edges.rs  merge_components.rs  mod.rs  outside_structures.rs  palm_dfs.rs  pathfinder.rs  visualize.rs
src/unused/: palm_tree.rs  reduce.rs  tsin.rs
(+1 files in other folders)
